# smdps_msgs

./: CMakeLists.txt  package.xml
action/: NewOrder.action  PackagingOrder.action  VisualDetection.action
msg/: CameraState.msg  CameraStatus.msg  CameraTrigger.msg  CleaningMachineScanner.msg  ContainerInfo.msg  DispenseContent.msg  DispenseResult.msg  DispenserStationStatus.msg  DispenserUnitStatus.msg  DispensingDetail.msg  DispensingError.msg  Drug.msg  DrugLocation.msg  Heartbeat.msg  MaterialBox.msg  MaterialBoxContainerInfo.msg  MaterialBoxSlot.msg  MaterialBoxStatus.msg  MotorStatus.msg  OrderRequest.msg  OrderResponse.msg  PackageInfo.msg  PackagingMachineInfo.msg  PackagingMachineStatus.msg  PackagingRequest.msg  PackagingStatus.msg  PatientInfo.msg  PrintingInfo.msg  ProductionLineStatus.msg  ScannerTrigger.msg  UnbindOrderId.msg  UnitType.msg
srv/: DispenseDrug.srv  MoveSlidingPlatform.srv  NewOrder.srv  PackagingOrder.srv  PrintingOrder.srv  ReadRegister.srv  SimplifiedPackagingOrder.srv  UInt32.srv  UInt8.srv  UnitRequest.srv  WriteRegister.srv
